force-app/main/default/objects/Stock__c/fields/Deliver_Stock__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Stock__c</fullName>
    <label>Deliver Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>