force-app/main/default/objects/Stock__c/fields/NS__c.field-meta.xml
<CustomField>
    <fullName>NS__c</fullName>
    <label>NS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>