force-app/main/default/objects/Stock__c/fields/Open_SO__c.field-meta.xml
<CustomField>
    <fullName>Open_SO__c</fullName>
    <label>Open SO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>