force-app/main/default/objects/Stock__c/fields/Ordered_Stock__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Stock__c</fullName>
    <label>Ordered Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>