force-app/main/default/objects/Stock__c/fields/Stock_Report__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report__c</fullName>
    <label>Stock Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>