force-app/main/default/objects/Stock__c/fields/Tier_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Tier_Distributor__c</fullName>
    <label>Tier(Distributor)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>