force-app/main/default/objects/Stock__c/fields/Updateded_BY__c.field-meta.xml
<CustomField>
    <fullName>Updateded_BY__c</fullName>
    <label>Updateded BY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>