force-app/main/default/objects/Stock__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>